// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/PCSummary default 1`] = `
.c0 {
  padding: 12px;
  border: 2px solid rgb(242,143,34);
  border-radius: 20px;
  display: grid;
  grid-gap: 8px;
  background-color: rgba(65,178,180,0.1);
  grid-template-columns: 1fr;
  position: relative;
}

.c0 h2,
.c0 h4 {
  margin: 0;
}

.c1 {
  display: grid;
  grid-gap: 6px;
  grid-template-columns: 1fr;
}

.c1 > div {
  display: grid;
  grid-template-columns: repeat(2,1fr);
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 > div span {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c1 > div h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c2 {
  display: grid;
  grid-gap: 6px;
  grid-template-columns: repeat(3,1fr);
}

.c2 > div {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 > div h2,
.c2 > div input {
  color: rgb(242,143,34);
  position: absolute;
  margin-left: 1px;
}

.c2 > div > div {
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 > div h2 {
  top: 5px;
}

.c2 > div img {
  height: 60px;
}

.c3 {
  display: grid;
  grid-gap: 6px;
  grid-template-columns: repeat(2,1fr);
}

.c3 > div {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c3 > div h2,
.c3 > div input {
  color: rgb(242,143,34);
  position: absolute;
  margin-left: 1px;
}

.c3 > div > div {
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 > div h2,
.c3 > div div {
  position: absolute;
  top: 19px;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-column-gap: 16px;
  text-align: right;
}

.c3 > div h2 span:nth-child(2),
.c3 > div div span:nth-child(2),
.c3 > div h2 input:nth-child(2),
.c3 > div div input:nth-child(2) {
  text-align: left;
}

.c3 > div h2 > input,
.c3 > div div > input {
  position: relative;
  font-size: 1.5em;
  text-align: right;
  top: 0;
  width: 100%;
}

.c3 > div div {
  top: 18px;
}

.c3 > div img {
  height: 50px;
}

.c3 > div:nth-child(1) > h2 {
  grid-template-columns: 1fr;
}

.c3 > div input {
  border: none;
  background: transparent;
  color: rgb(0,130,155);
  width: 90%;
  text-align: center;
  font-size: 1.5em;
  font-family: "Monkirta",Helvetica,sans-serif;
  top: 18px;
}

.c3 > div input::-webkit-inner-spin-button,
.c3 > div input::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  margin-top: 8px;
  margin-right: 8px;
  cursor: pointer;
}

.c4 > svg {
  color: rgb(242,143,34);
  font-size: 20px;
}

@media only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px) {
  .c0 {
    grid-template-columns: 1fr 2fr;
  }
}

@media only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: repeat(3,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:1800px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
    grid-auto-flow: column;
    grid-template-rows: repeat(2,1fr);
  }
}

@media only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px) {
  .c1 {
    grid-row: 1/3;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c2 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c3 {
    grid-template-columns: repeat(4,1fr);
  }
}

<div
  class="c0"
  data-testid="pc-summary-1"
>
  <section
    class="c1"
  >
    <div>
      <h4>
        Player name:
      </h4>
      <span>
        Player 1
      </span>
    </div>
    <div>
      <h4>
        Character name:
      </h4>
      <span>
        Aditi Desai
      </span>
    </div>
    <div>
      <h4>
        Archetype:
      </h4>
      <span>
        Clone
      </span>
    </div>
    <div>
      <h4>
        Career:
      </h4>
      <span>
        Academic
      </span>
    </div>
  </section>
  <section
    class="c2"
  >
    <div>
      <img
        alt="brawn"
        src="Brawn.png"
      />
      <h2>
        2
      </h2>
    </div>
    <div>
      <img
        alt="agility"
        src="Agility.png"
      />
      <h2>
        2
      </h2>
    </div>
    <div>
      <img
        alt="intellect"
        src="Intellect.png"
      />
      <h2>
        4
      </h2>
    </div>
    <div>
      <img
        alt="cunning"
        src="Cunning.png"
      />
      <h2>
        2
      </h2>
    </div>
    <div>
      <img
        alt="willpower"
        src="Willpower.png"
      />
      <h2>
        4
      </h2>
    </div>
    <div>
      <img
        alt="presence"
        src="Presence.png"
      />
      <h2>
        2
      </h2>
    </div>
  </section>
  <section
    class="c3"
  >
    <div>
      <img
        alt="soak"
        src="Soak.png"
      />
      <h2>
        3
      </h2>
    </div>
    <div>
      <img
        alt="wounds"
        src="Wounds.png"
      />
      <h2>
        <span>
          13
        </span>
        <span>
          11
        </span>
      </h2>
    </div>
    <div>
      <img
        alt="strain"
        src="Strain.png"
      />
      <h2>
        <span>
          14
        </span>
        <span>
          2
        </span>
      </h2>
    </div>
    <div>
      <img
        alt="defense"
        src="Defense.png"
      />
      <h2>
        <span>
          1
        </span>
        <span>
          1
        </span>
      </h2>
    </div>
  </section>
  <a
    class="c4"
    data-testid="pc-sheet-link-1"
    href="/players-characters/1"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
      />
    </svg>
  </a>
</div>
`;

exports[`Storyshots Components/PCSummary editing 1`] = `
.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  background: transparent;
  border: none;
  color: rgb(242,143,34);
  padding: 6px;
  font-size: 15px;
  cursor: pointer;
}

.c4:disabled {
  color: rgb(255,244,233);
  cursor: not-allowed;
}

.c0 {
  padding: 12px;
  border: 2px solid rgb(242,143,34);
  border-radius: 20px;
  display: grid;
  grid-gap: 8px;
  background-color: rgba(65,178,180,0.1);
  grid-template-columns: 1fr;
  position: relative;
}

.c0 h2,
.c0 h4 {
  margin: 0;
}

.c1 {
  display: grid;
  grid-gap: 6px;
  grid-template-columns: 1fr;
}

.c1 > div {
  display: grid;
  grid-template-columns: repeat(2,1fr);
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 > div span {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c1 > div h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c2 {
  display: grid;
  grid-gap: 6px;
  grid-template-columns: repeat(3,1fr);
}

.c2 > div {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c2 > div h2,
.c2 > div input {
  color: rgb(242,143,34);
  position: absolute;
  margin-left: 1px;
}

.c2 > div > div {
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 > div h2 {
  top: 5px;
}

.c2 > div img {
  height: 60px;
}

.c5 {
  display: grid;
  grid-gap: 6px;
  grid-template-columns: repeat(2,1fr);
}

.c5 > div {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c5 > div h2,
.c5 > div input {
  color: rgb(242,143,34);
  position: absolute;
  margin-left: 1px;
}

.c5 > div > div {
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c5 > div h2,
.c5 > div div {
  position: absolute;
  top: 19px;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-column-gap: 16px;
  text-align: right;
}

.c5 > div h2 span:nth-child(2),
.c5 > div div span:nth-child(2),
.c5 > div h2 input:nth-child(2),
.c5 > div div input:nth-child(2) {
  text-align: left;
}

.c5 > div h2 > input,
.c5 > div div > input {
  position: relative;
  font-size: 1.5em;
  text-align: right;
  top: 0;
  width: 100%;
}

.c5 > div div {
  top: 18px;
}

.c5 > div img {
  height: 50px;
}

.c5 > div:nth-child(1) > h2 {
  grid-template-columns: 1fr;
}

.c5 > div input {
  border: none;
  background: transparent;
  color: rgb(0,130,155);
  width: 90%;
  text-align: center;
  font-size: 1.5em;
  font-family: "Monkirta",Helvetica,sans-serif;
  top: 18px;
}

.c5 > div input::-webkit-inner-spin-button,
.c5 > div input::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 {
  position: absolute;
  top: 0;
  right: 0;
  margin-top: 8px;
  margin-right: 8px;
  cursor: pointer;
}

.c6 > svg {
  color: rgb(242,143,34);
  font-size: 20px;
}

@media only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px) {
  .c0 {
    grid-template-columns: 1fr 2fr;
  }
}

@media only screen and (min-width:1800px) {
  .c0 {
    grid-template-columns: repeat(3,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:1800px) {
  .c1 {
    grid-template-columns: repeat(2,1fr);
    grid-auto-flow: column;
    grid-template-rows: repeat(2,1fr);
  }
}

@media only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px) {
  .c1 {
    grid-row: 1/3;
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c2 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c5 {
    grid-template-columns: repeat(4,1fr);
  }
}

<div
  class="c0"
  data-testid="pc-summary-1"
>
  <section
    class="c1"
  >
    <div>
      <h4>
        Player name:
      </h4>
      <span>
        Player 1
      </span>
    </div>
    <div>
      <h4>
        Character name:
      </h4>
      <span>
        Aditi Desai
      </span>
    </div>
    <div>
      <h4>
        Archetype:
      </h4>
      <span>
        Clone
      </span>
    </div>
    <div>
      <h4>
        Career:
      </h4>
      <span>
        Academic
      </span>
    </div>
  </section>
  <section
    class="c2"
  >
    <div>
      <img
        alt="brawn"
        src="Brawn.png"
      />
      <h2>
        2
      </h2>
      <div
        class="c3"
        data-testid="badge-modifiers-characteristics.brawn"
      >
        <button
          class="c4"
          data-testid="decrease-characteristics.brawn"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13H5v-2h14v2z"
            />
          </svg>
        </button>
        <button
          class="c4"
          data-testid="increase-characteristics.brawn"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      <img
        alt="agility"
        src="Agility.png"
      />
      <h2>
        2
      </h2>
      <div
        class="c3"
        data-testid="badge-modifiers-characteristics.agility"
      >
        <button
          class="c4"
          data-testid="decrease-characteristics.agility"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13H5v-2h14v2z"
            />
          </svg>
        </button>
        <button
          class="c4"
          data-testid="increase-characteristics.agility"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      <img
        alt="intellect"
        src="Intellect.png"
      />
      <h2>
        4
      </h2>
      <div
        class="c3"
        data-testid="badge-modifiers-characteristics.intellect"
      >
        <button
          class="c4"
          data-testid="decrease-characteristics.intellect"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13H5v-2h14v2z"
            />
          </svg>
        </button>
        <button
          class="c4"
          data-testid="increase-characteristics.intellect"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      <img
        alt="cunning"
        src="Cunning.png"
      />
      <h2>
        2
      </h2>
      <div
        class="c3"
        data-testid="badge-modifiers-characteristics.cunning"
      >
        <button
          class="c4"
          data-testid="decrease-characteristics.cunning"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13H5v-2h14v2z"
            />
          </svg>
        </button>
        <button
          class="c4"
          data-testid="increase-characteristics.cunning"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      <img
        alt="willpower"
        src="Willpower.png"
      />
      <h2>
        4
      </h2>
      <div
        class="c3"
        data-testid="badge-modifiers-characteristics.willpower"
      >
        <button
          class="c4"
          data-testid="decrease-characteristics.willpower"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13H5v-2h14v2z"
            />
          </svg>
        </button>
        <button
          class="c4"
          data-testid="increase-characteristics.willpower"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div>
      <img
        alt="presence"
        src="Presence.png"
      />
      <h2>
        2
      </h2>
      <div
        class="c3"
        data-testid="badge-modifiers-characteristics.presence"
      >
        <button
          class="c4"
          data-testid="decrease-characteristics.presence"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13H5v-2h14v2z"
            />
          </svg>
        </button>
        <button
          class="c4"
          data-testid="increase-characteristics.presence"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </section>
  <section
    class="c5"
  >
    <div>
      <img
        alt="soak"
        src="Soak.png"
      />
      <input
        alt="Soak Value"
        min="0"
        type="number"
        value="3"
      />
    </div>
    <div>
      <img
        alt="wounds"
        src="Wounds.png"
      />
      <div>
        <input
          alt="Total Wounds"
          min="0"
          type="number"
          value="13"
        />
        <input
          alt="Current Wounds"
          min="0"
          type="number"
          value="11"
        />
      </div>
    </div>
    <div>
      <img
        alt="strain"
        src="Strain.png"
      />
      <div>
        <input
          alt="Total Strain"
          min="0"
          type="number"
          value="14"
        />
        <input
          alt="Current Strain"
          min="0"
          type="number"
          value="2"
        />
      </div>
    </div>
    <div>
      <img
        alt="defense"
        src="Defense.png"
      />
      <div>
        <input
          alt="Melee Defense"
          min="0"
          type="number"
          value="1"
        />
        <input
          alt="Ranged Defense"
          min="0"
          type="number"
          value="1"
        />
      </div>
    </div>
  </section>
  <a
    class="c6"
    data-testid="pc-sheet-link-1"
    href="/players-characters/1"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
      />
    </svg>
  </a>
</div>
`;
